--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -85,7 +85,7 @@ sp-npos-elections = { version = "3.0.0", default-features = false, git = "https:
 
 sp-io = { version = '3.0.0', default-features = false, git = "https://github.com/paritytech/substrate.git" }
 
-# Used for the node template's RPCs
+# Used for the node polkapool's RPCs
 frame-system-rpc-runtime-api = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
 
 # Used for runtime benchmarking
@@ -103,7 +103,9 @@ polkadex-primitives = { git = "https://github.com/Polkadex-Substrate/polkadex-pr
 polkadex-fungible-assets = { path = "../pallets/fungible-assets", version = "0.1.0", default-features = false }
 polkadex-ocex = { path = "../pallets/ocex", default-features = false }
 pallet-substratee-registry = { git = "https://github.com/Polkadex-Substrate/pallet-substratee-registry.git", default-features = false }
+pallet-polkapool = { path = "../pallets/polkapool", default-features = false}
 token-faucet-pallet = { path = "../pallets/token-faucet", default-features = false }
+
 
 [dependencies.chainbridge]
 default-features = false
@@ -195,6 +197,7 @@ std = [
 	"polkadex-primitives/std",
 	"polkadex-fungible-assets/std",
 	"polkadex-ocex/std",
+	"pallet-polkapool/std",
 	"token-faucet-pallet/std",
 	"chainbridge/std",
 	'erc721/std',
