--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -85,6 +85,10 @@ pallet-transaction-payment = { default-features = false, version = '3.0.0', git 
 polkadex-primitives = { git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git", branch = 'main', default-features = false }
 sp-authority-discovery = { version = '3.0.0', git = "https://github.com/paritytech/substrate" }
 
+# Third party dependencies
+pallet-verifier-lightclient = {git = "https://github.com/Polkadex-Substrate/polkadot-ethereum", default-features=false, rev="444f3b85cac07703c4b58347ce489fd04b9a0a27"}
+
+
 [dev-dependencies]
 futures = "0.3.9"
 tempfile = "3.1.0"
