--- a/pallets/Polkadex_Ido/Cargo.toml
+++ b/pallets/Polkadex_Ido/Cargo.toml
@@ -23,7 +23,7 @@ orml-currencies = { git = "https://github.com/Polkadex-Substrate/open-runtime-mo
 orml-traits = { git = "https://github.com/Polkadex-Substrate/open-runtime-module-library.git", default-features = false }
 pallet-balances = {git = "https://github.com/paritytech/substrate", default-features = false }
 sp-runtime = {  git = "https://github.com/paritytech/substrate", default-features = false }
-polkadex-primitives = { path = "../../primitives", default-features = false }
+polkadex-primitives = { git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git", branch = 'main', default-features = false }
 
 [dev-dependencies]
 sp-keyring = {  git = "https://github.com/paritytech/substrate", default-features = false }
