--- a/pallets/polkapool/Cargo.toml
+++ b/pallets/polkapool/Cargo.toml
@@ -20,6 +20,7 @@ orml-traits = { git = "https://github.com/Polkadex-Substrate/open-runtime-module
 # external dependencies
 codec = {default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0'}
 rand = {default-features = false, version = '0.8.0'}
+rand_chacha = {default-features = false, version = '0.3.0'}
 # Substrate dependencies
 frame-benchmarking = {default-features = false, optional = true, version = '3.1.0', git = 'https://github.com/paritytech/substrate.git'}
 frame-support = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git'}
@@ -39,6 +40,7 @@ default = ['std']
 runtime-benchmarks = ['frame-benchmarking']
 std = [
 	"rand/std",
+	"rand_chacha/std",
 	'codec/std',
 	'frame-support/std',
 	'frame-system/std',
