Implements Polkapool Pallet (#208)
* Make Single Validator for now

* Added on_initialize functions

* Encode, Decode issue

* Encode, Decode issue

* Adds Call Filter

* Integration to runtime

* Polkapool Compiles

* change minimum stake amount

* slash stake for defaulted users

* Done
[x] Implements `MinStakePerWeight`
[x] Implements `MaxAllowedWeight`
[x] Governance dispatchable to slash the stake of defaulting users

Todo
[ ] Shuffling for Calls
[ ] MinStakePeriodPerWeight
[ ] Extend CallFilter

* Done
[x] Implements `MinStakePerWeight`
[x] Implements `MaxAllowedWeight`
[x] Governance dispatchable to slash the stake of defaulting users
[x] Shuffling for Calls
Todo
[ ] MinStakePeriodPerWeight
[ ] Extend CallFilter

* remove extra default impl for ExtStore

* Implemented default for ExtStore

* Handled extrinsics execution errors

* rename `PostCallInfo` to `PostInfo`

* added unstake

* remove unused imports

* Tweaks, removed redundant account argument from unstake

* Added documentation for Polkapool

* Polkapool Compiles

Integration to runtime

Adds Call Filter

Encode, Decode issue

Encode, Decode issue

Added on_initialize functions

Make Single Validator for now

* Polkapool implemented

remove unused imports

added unstake

rename `PostCallInfo` to `PostInfo`

Handled extrinsics execution errors

Implemented default for ExtStore

remove extra default impl for ExtStore

Done
[x] Implements `MinStakePerWeight`
[x] Implements `MaxAllowedWeight`
[x] Governance dispatchable to slash the stake of defaulting users
[x] Shuffling for Calls
Todo
[ ] MinStakePeriodPerWeight
[ ] Extend CallFilter

Done
[x] Implements `MinStakePerWeight`
[x] Implements `MaxAllowedWeight`
[x] Governance dispatchable to slash the stake of defaulting users

Todo
[ ] Shuffling for Calls
[ ] MinStakePeriodPerWeight
[ ] Extend CallFilter

slash stake for defaulted users

change minimum stake amount

* Added documentation for Polkapool

* Fix compile errors

* feat: adds polkapool pallet



--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,6 @@ members = [
     'pallets/token-faucet',
     'pallets/pdex-migration',
 	'pallets/Polkadex_Ido',
+    'pallets/polkapool',
     'runtime',
 ]
