--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -105,6 +105,7 @@ polkadex-primitives = { git = "https://github.com/Polkadex-Substrate/polkadex-pr
 polkadex-fungible-assets = { path = "../pallets/fungible-assets", version = "0.1.0", default-features = false }
 polkadex-ocex = { path = "../pallets/ocex", default-features = false }
 pallet-substratee-registry = { package="pallet-teerex", git = "https://github.com/Polkadex-Substrate/pallet-substratee-registry", default-features = false }
+pallet-polkapool = { path = "../pallets/polkapool", default-features = false}
 token-faucet-pallet = { path = "../pallets/token-faucet", default-features = false }
 erc20-pdex-migration-pallet = { path = "../pallets/pdex-migration", default-features = false }
 polkadex-ido = { path = "../pallets/Polkadex_Ido", default-features = false }
@@ -199,7 +200,8 @@ std = [
     "polkadex-primitives/std",
     "polkadex-fungible-assets/std",
     "polkadex-ocex/std",
-    "token-faucet-pallet/std",
+    "pallet-polkapool/std",
+	"token-faucet-pallet/std",
     "chainbridge/std",
     'erc721/std',
     'example/std',
