--- a/contracts/uniswap_v2/Cargo.toml
+++ b/contracts/uniswap_v2/Cargo.toml
@@ -18,9 +18,11 @@ scale = { package = "parity-scale-codec", version = "2.0.1", default-features = 
 ] }
 scale-info = { version = "0.6.0", default-features = false, features = [
     "derive",
-], optional = true }
+], optional = false }
 sp-core = { tag = "v3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
 sp-runtime = { tag = "v3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
+
+err-derive = { version = "0.3.0", default-features = false }
 
 # Should be removed once bitvecto-rs/bitvec#105 is resolved
 funty = "=1.1.0"
@@ -41,7 +43,6 @@ std = [
     "ink_storage/std",
     "ink_primitives/std",
     "scale/std",
-    "scale-info/std",
     "sp-runtime/std",
     "sp-core/std",
 ]
