--- a/contracts/uniswap_v2/Cargo.toml
+++ b/contracts/uniswap_v2/Cargo.toml
@@ -3,6 +3,7 @@ name = "uniswap_v2"
 version = "0.1.0"
 authors = ["[your_name] <[your_email]>"]
 edition = "2018"
+resolver = "2"
 
 [dependencies]
 ink_primitives = { version = "3.0.0-rc3", default-features = false }
@@ -19,8 +20,8 @@ scale = { package = "parity-scale-codec", version = "2.0.1", default-features = 
 scale-info = { version = "0.6.0", default-features = false, features = [
     "derive",
 ], optional = false }
-sp-core = { tag = "v3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
-sp-runtime = { tag = "v3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
+sp-core = { tag = "3.0.0-rc3", default-features = false }
+sp-runtime = { tag = "3.0.0-rc3", default-features = false }
 
 err-derive = { version = "0.3.0", default-features = false }
 
