--- a/contracts/uniswap_v2/Cargo.toml
+++ b/contracts/uniswap_v2/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "uniswap_v2"
 version = "0.1.0"
-authors = ["[your_name] <[your_email]>"]
+authors = ["Frank Li <frank@polkadex.trade>"]
 edition = "2018"
 
 [profile.release]
