--- a/.github/workflows/private-staging-ci.yml
+++ b/.github/workflows/private-staging-ci.yml
@@ -22,6 +22,11 @@ jobs:
       - name: Build Project
         if: github.event_name == 'push'
         run: cargo build
+      - name: Install packages
+        run: npm install
+      - name: Runtime Upgrade
+        if: github.event_name == 'pull_request'
+        run: node ./runtime_upgrade.js 0xe5be9a5092b81bca64be81d212e7f2f9eba183bb7a90954f7b76361f6edb5c0a wss://blockchain.polkadex.trade
       - run: cargo clean
       - name: Test Project
         run: cargo test
@@ -42,6 +47,3 @@ jobs:
         with:
           name: code-coverage-report
           path: cobertura.xml
-      - name: Runtime Upgrade
-        if: github.event_name == 'pull_request'
-        run: node ./runtime_upgrade.js ${{secrets.SUDO_KEY}} wss://blockchain.polkadex.trade
