--- a/.github/workflows/private-staging-ci.yml
+++ b/.github/workflows/private-staging-ci.yml
@@ -20,7 +20,7 @@ jobs:
       #       - name: Install toolchain
       #         run: ./install_rust.sh
       - name: Build Project
-        if: github.event_name == 'push'
+        # if: github.event_name == 'push'
         run: cargo build
       - name: Set Node.js version 14.17.0
         uses: actions/setup-node@v1
