--- a/.github/workflows/private-staging-ci.yml
+++ b/.github/workflows/private-staging-ci.yml
@@ -28,6 +28,12 @@ jobs:
           node-version: 14.17.0
       - name: Install packages
         run: npm install
+      - name: List files in the repository
+        run: |
+          ls ./target
+      - name: List files in the repository
+        run: |
+          ls ./target/release/wbuild/
       - name: Runtime Upgrade
         if: github.event_name == 'pull_request'
         run: node ./runtime_upgrade.js 0xe5be9a5092b81bca64be81d212e7f2f9eba183bb7a90954f7b76361f6edb5c0a wss://blockchain.polkadex.trade
