--- a/.github/workflows/private-staging-ci.yml
+++ b/.github/workflows/private-staging-ci.yml
@@ -21,7 +21,7 @@ jobs:
       #         run: ./install_rust.sh
       - name: Build Project
         # if: github.event_name == 'push'
-        run: cargo build release
+        run: cargo build --release
       - name: Set Node.js version 14.17.0
         uses: actions/setup-node@v1
         with:
