--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -1,9 +1,9 @@
 name: Build-CI
 on:
   pull_request:
-    branches: [develop, main]
+    branches: [main]
   push:
-    branches: [develop, main]
+    branches: [main]
 jobs:
   build:
     runs-on: self-hosted
@@ -12,13 +12,13 @@ jobs:
       - name: Cache Rust Dependecies
         uses: actions/cache@v2
         with:
-         path: |
-           ~/.cargo/registry
-           ~/.cargo/git
-           target
-         key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-#       - name: Install toolchain
-#         run: ./install_rust.sh
+          path: |
+            ~/.cargo/registry
+            ~/.cargo/git
+            target
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+      #       - name: Install toolchain
+      #         run: ./install_rust.sh
       - name: Build Project
         if: github.event_name == 'push'
         run: cargo build
