--- a/pallets/ocex/Cargo.toml
+++ b/pallets/ocex/Cargo.toml
@@ -25,7 +25,7 @@ orml-tokens = { git = "https://github.com/Polkadex-Substrate/open-runtime-module
 orml-currencies = { git = "https://github.com/Polkadex-Substrate/open-runtime-module-library.git", default-features = false }
 orml-traits = { git = "https://github.com/Polkadex-Substrate/open-runtime-module-library.git", default-features = false }
 pallet-balances = {git = "https://github.com/paritytech/substrate", default-features = false }
-pallet-substratee-registry = { package="pallet-teerex", git = "https://github.com/Polkadex-Substrate/pallet-substratee-registry", default-features = false }
+pallet-substratee-registry = { package="pallet-teerex", git = "https://github.com/Polkadex-Substrate/pallet-substratee-registry", default-features = false, rev = "0be425c849bb32c220356f2c51e08dd8adf60def"}
 timestamp= {git = "https://github.com/paritytech/substrate.git", package = "pallet-timestamp", version = "3.0.0", default-features = false}
 polkadex-sgx-primitives = {package="polkadex-sgx-primitives", git = "https://github.com/Polkadex-Substrate/polkadexTEE-worker", branch = "develop", default-features=false}
 
