--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -104,7 +104,8 @@ artemis-core = { git = "https://github.com/Polkadex-Substrate/polkadot-ethereum"
 polkadex-primitives = { git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git", branch = 'main', default-features = false }
 polkadex-fungible-assets = { path = "../pallets/fungible-assets", version = "0.1.0", default-features = false }
 polkadex-ocex = { path = "../pallets/ocex", default-features = false }
-pallet-substratee-registry = { package="pallet-teerex", git = "https://github.com/Polkadex-Substrate/pallet-substratee-registry", default-features = false }
+pallet-substratee-registry = { package="pallet-teerex", git = "https://github.com/Polkadex-Substrate/pallet-substratee-registry", default-features = false, rev = "0be425c849bb32c220356f2c51e08dd8adf60def"}
+
 pallet-polkapool = { path = "../pallets/polkapool", default-features = false}
 token-faucet-pallet = { path = "../pallets/token-faucet", default-features = false }
 erc20-pdex-migration-pallet = { path = "../pallets/pdex-migration", default-features = false }
