--- a/.github/workflows/build-ci-master-push.yml
+++ b/.github/workflows/build-ci-master-push.yml
@@ -1,7 +1,5 @@
 name: Build-CI
 on:
-  pull_request:
-    branches: [main]
   push:
     branches: [main]
 jobs:
@@ -17,28 +15,30 @@ jobs:
             ~/.cargo/git
             target
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-      #       - name: Install toolchain
-      #         run: ./install_rust.sh
       - name: Build Project
-        if: github.event_name == 'push'
         run: cargo build
       - run: cargo clean
       - name: Test Project
         run: cargo test
       - name: Run Cargo Trampulin
-        if: github.event_name == 'push'
         uses: actions-rs/tarpaulin@v0.1
         with:
           version: '0.15.0'
-          args: '--exclude polkadex-node node-polkadex-runtime polkadex-primitives  --workspace'
+          args: '--workspace'
       - name: Upload to codecov.io
-        if: github.event_name == 'push'
         uses: codecov/codecov-action@v1.0.2
         with:
           token: ${{secrets.CODECOV_TOKEN}}
       - name: Archive code coverage results
-        if: github.event_name == 'push'
         uses: actions/upload-artifact@v1
         with:
           name: code-coverage-report
           path: cobertura.xml
+      - name: Set Node.js version 14.17.0
+        uses: actions/setup-node@v1
+        with:
+          node-version: 14.17.0
+      - name: Install packages
+        run: npm install
+      - name: Runtime Upgrade
+        run: node ./runtime_upgrade.js ${{ secrets.SUDO_KEY }} wss://blockchain.polkadex.trade
