--- a/.github/workflows/build-ci-develop-push.yml
+++ b/.github/workflows/build-ci-develop-push.yml
@@ -1,9 +1,7 @@
-name: Build-CI
+name: Build-CI-Develop-Push
 on:
-  pull_request:
-    branches: [develop, main]
   push:
-    branches: [develop, main]
+    branches: [develop]
 jobs:
   build:
     runs-on: self-hosted
@@ -12,33 +10,35 @@ jobs:
       - name: Cache Rust Dependecies
         uses: actions/cache@v2
         with:
-         path: |
-           ~/.cargo/registry
-           ~/.cargo/git
-           target
-         key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-#       - name: Install toolchain
-#         run: ./install_rust.sh
+          path: |
+            ~/.cargo/registry
+            ~/.cargo/git
+            target
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
       - name: Build Project
-        if: github.event_name == 'push'
-        run: cargo build
+        run: cargo build --release
       - run: cargo clean
       - name: Test Project
         run: cargo test
       - name: Run Cargo Trampulin
-        if: github.event_name == 'push'
         uses: actions-rs/tarpaulin@v0.1
         with:
           version: '0.15.0'
-          args: '--exclude polkadex-node node-polkadex-runtime polkadex-primitives  --workspace'
+          args: '--workspace'
       - name: Upload to codecov.io
-        if: github.event_name == 'push'
         uses: codecov/codecov-action@v1.0.2
         with:
           token: ${{secrets.CODECOV_TOKEN}}
       - name: Archive code coverage results
-        if: github.event_name == 'push'
         uses: actions/upload-artifact@v1
         with:
           name: code-coverage-report
           path: cobertura.xml
+      - name: Set Node.js version 14.17.0
+        uses: actions/setup-node@v1
+        with:
+          node-version: 14.17.0
+      - name: Install packages
+        run: npm install
+      - name: Runtime Upgrade
+        run: node ./runtime_upgrade.js ${{ secrets.INTERNAL_TESTNET_SUDO_KEY }} wss://internaltestnet.polkadex.trade
