--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ members = [
     'pallets/pdex-migration',
     'pallets/Polkadex_Ido',
     'pallets/polkapool',
+    'pallets/Polkadex_Ido/runtime-api',
     'runtime',
     'contracts/uniswap_v2',
 ]
