--- a/.github/workflows/build-ci-develop-push.yml
+++ b/.github/workflows/build-ci-develop-push.yml
@@ -24,7 +24,7 @@ jobs:
         uses: actions-rs/tarpaulin@v0.1
         with:
           version: '0.15.0'
-          args: '--workspace'
+          args: '--exclude polkadex-node node-polkadex-runtime polkadex-primitives  --workspace'
       - name: Upload to codecov.io
         uses: codecov/codecov-action@v1.0.2
         with:
