--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ members = [
     'pallets/polkapool',
     'runtime',
     'pallets/Polkadex_Ido/rpc',
+    'pallets/Polkadex_Ido/rpc/runtime-api',
     'pallets/Polkadex_Ido/common',
     'contracts/uniswap_v2',
 ]
