--- a/pallets/Polkadex_Ido/Cargo.toml
+++ b/pallets/Polkadex_Ido/Cargo.toml
@@ -27,7 +27,7 @@ sp-runtime = {  git = "https://github.com/paritytech/substrate", default-feature
 polkadex-primitives = { git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git", branch = 'main', default-features = false }
 rand = {default-features = false, version = '0.8.0'}
 rand_chacha = {default-features = false, version = '0.3.0'}
-common = { path = "../../pallets/Polkadex_Ido/common"}
+pallet-polkadex-ido-primitives = { path = "../../pallets/Polkadex_Ido/common", default-features = false}
 [dev-dependencies]
 sp-keyring = {  git = "https://github.com/paritytech/substrate", default-features = false }
 frame-support-test = {  git = "https://github.com/paritytech/substrate", default-features = false }
@@ -52,6 +52,7 @@ std = [
     "sp-runtime/std",
     "polkadex-primitives/std",
 	'frame-benchmarking/std',
+    'pallet-polkadex-ido-primitives/std'
 ]
 runtime-benchmarks = [
 	"frame-benchmarking",
