--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -83,8 +83,8 @@ sp-io = { version = '3.0.0', default-features = false, git = "https://github.com
 
 # Used for the node template's RPCs
 frame-system-rpc-runtime-api = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
-polkadex-ido-runtime-api = {path = "../pallets/Polkadex_Ido/rpc/runtime-api"}
-pallet-polkadex-ido-primitives = {path = "../pallets/Polkadex_Ido/common"}# Used for runtime benchmarking
+polkadex-ido-runtime-api = {path = "../pallets/Polkadex_Ido/rpc/runtime-api", default-features = false}
+pallet-polkadex-ido-primitives = {path = "../pallets/Polkadex_Ido/common",  default-features = false}# Used for runtime benchmarking
 frame-benchmarking = { version = "3.1.0", default-features = false, git = "https://github.com/paritytech/substrate.git", optional = true }
 frame-system-benchmarking = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", optional = true }
 
