--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -94,18 +94,18 @@ orml-currencies = { git = "https://github.com/Polkadex-Substrate/open-runtime-mo
 orml-tokens = { git = "https://github.com/Polkadex-Substrate/open-runtime-module-library.git", default-features = false }
 orml-traits = { git = "https://github.com/Polkadex-Substrate/open-runtime-module-library.git", default-features = false }
 
-# Third party dependencies
-pallet-verifier-lightclient = { git = "https://github.com/Polkadex-Substrate/polkadot-ethereum", default-features = false, rev = "6ac2106a608bf11c53981b67a106c2afd43bbee6" }
-pallet-eth-dispatch = { package = "artemis-dispatch", git = "https://github.com/Polkadex-Substrate/polkadot-ethereum", default-features = false, rev = "6ac2106a608bf11c53981b67a106c2afd43bbee6" }
-pallet-basic-channel = { package = "artemis-basic-channel", git = "https://github.com/Polkadex-Substrate/polkadot-ethereum", default-features = false, rev = "6ac2106a608bf11c53981b67a106c2afd43bbee6" }
-artemis-core = { git = "https://github.com/Polkadex-Substrate/polkadot-ethereum", default-features = false, rev = "6ac2106a608bf11c53981b67a106c2afd43bbee6" }
+# Snowbridge Dependencies
+snowbridge-ethereum-light-client = { git = "https://github.com/Polkadex-Substrate/snowbridge.git", default-features = false, branch = "gj-relayer" }
+snowbridge-dispatch = { git = "https://github.com/Polkadex-Substrate/snowbridge.git", default-features = false, branch = "gj-relayer" }
+snowbridge-basic-channel = { git = "https://github.com/Polkadex-Substrate/snowbridge.git", default-features = false, branch = "gj-relayer" }
+snowbridge-core = { git = "https://github.com/Polkadex-Substrate/snowbridge.git", default-features = false, branch = "gj-relayer" }
 
 # Local Dependecies
 polkadex-primitives = { git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git", branch = 'main', default-features = false }
 polkadex-fungible-assets = { path = "../pallets/fungible-assets", version = "0.1.0", default-features = false }
 polkadex-ocex = { path = "../pallets/ocex", default-features = false }
-pallet-substratee-registry = { package="pallet-teerex", git = "https://github.com/Polkadex-Substrate/pallet-substratee-registry", default-features = false }
-pallet-polkapool = { path = "../pallets/polkapool", default-features = false}
+pallet-substratee-registry = { package = "pallet-teerex", git = "https://github.com/Polkadex-Substrate/pallet-substratee-registry", default-features = false }
+pallet-polkapool = { path = "../pallets/polkapool", default-features = false }
 token-faucet-pallet = { path = "../pallets/token-faucet", default-features = false }
 erc20-pdex-migration-pallet = { path = "../pallets/pdex-migration", default-features = false }
 polkadex-ido = { path = "../pallets/Polkadex_Ido", default-features = false }
@@ -188,10 +188,10 @@ std = [
     'sp-transaction-pool/std',
     'sp-version/std',
     "sp-npos-elections/std",
-    'pallet-verifier-lightclient/std',
-    'pallet-eth-dispatch/std',
-    'pallet-basic-channel/std',
-    'artemis-core/std',
+    'snowbridge-ethereum-light-client/std',
+    'snowbridge-dispatch/std',
+    'snowbridge-basic-channel/std',
+    'snowbridge-core/std',
     'erc20-pdex-migration-pallet/std',
     "orml-vesting/std",
     "orml-currencies/std",
@@ -201,11 +201,11 @@ std = [
     "polkadex-fungible-assets/std",
     "polkadex-ocex/std",
     "pallet-polkapool/std",
-	"token-faucet-pallet/std",
+    "token-faucet-pallet/std",
     "chainbridge/std",
     'erc721/std',
     'example/std',
-	'polkadex-ido/std'
+    'polkadex-ido/std'
 ]
 runtime-benchmarks = [
     "frame-benchmarking",
