--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -95,10 +95,10 @@ orml-tokens = { git = "https://github.com/Polkadex-Substrate/open-runtime-module
 orml-traits = { git = "https://github.com/Polkadex-Substrate/open-runtime-module-library.git", default-features = false }
 
 # Snowbridge Dependencies
-snowbridge-ethereum-light-client = { git = "https://github.com/Polkadex-Substrate/snowbridge.git", default-features = false, branch = "gj-relayer" }
-snowbridge-dispatch = { git = "https://github.com/Polkadex-Substrate/snowbridge.git", default-features = false, branch = "gj-relayer" }
-snowbridge-basic-channel = { git = "https://github.com/Polkadex-Substrate/snowbridge.git", default-features = false, branch = "gj-relayer" }
-snowbridge-core = { git = "https://github.com/Polkadex-Substrate/snowbridge.git", default-features = false, branch = "gj-relayer" }
+snowbridge-ethereum-light-client = { git = "https://github.com/Polkadex-Substrate/snowbridge.git", default-features = false }
+snowbridge-dispatch = { git = "https://github.com/Polkadex-Substrate/snowbridge.git", default-features = false }
+snowbridge-basic-channel = { git = "https://github.com/Polkadex-Substrate/snowbridge.git", default-features = false }
+snowbridge-core = { git = "https://github.com/Polkadex-Substrate/snowbridge.git", default-features = false }
 
 # Local Dependecies
 polkadex-primitives = { git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git", branch = 'main', default-features = false }
