--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -87,7 +87,7 @@ polkadex-primitives = { git = "https://github.com/Polkadex-Substrate/polkadex-pr
 sp-authority-discovery = { version = '3.0.0', git = "https://github.com/paritytech/substrate" }
 
 # Third party dependencies
-snowbridge-ethereum-light-client = { git = "https://github.com/Polkadex-Substrate/snowbridge.git", default-features = false, branch = "gj-relayer" }
+snowbridge-ethereum-light-client = { git = "https://github.com/Polkadex-Substrate/snowbridge.git", default-features = false }
 
 
 [dev-dependencies]
