--- a/pallets/Polkadex_Ido/Cargo.toml
+++ b/pallets/Polkadex_Ido/Cargo.toml
@@ -10,7 +10,7 @@ targets = ["x86_64-unknown-linux-gnu"]
 [dependencies]
 codec = { version = "2.0.0", package = "parity-scale-codec", default-features = false, features = ["derive"] }
 hex = { version = "2.1.0", package = "rustc-hex", default-features = false }
-serde = { version = "1.0.101", optional = true }
+serde = { version = "1.0.127", optional = true }
 
 frame-support = { git = "https://github.com/paritytech/substrate", default-features = false }
 frame-system = { git = "https://github.com/paritytech/substrate", default-features = false }
@@ -26,6 +26,7 @@ sp-runtime = {  git = "https://github.com/paritytech/substrate", default-feature
 polkadex-primitives = { git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git", branch = 'main', default-features = false }
 rand = {default-features = false, version = '0.8.0'}
 rand_chacha = {default-features = false, version = '0.3.0'}
+pallet-polkadex-ido-primitives = { path = "../../pallets/Polkadex_Ido/common", default-features = false}
 [dev-dependencies]
 sp-keyring = {  git = "https://github.com/paritytech/substrate", default-features = false }
 frame-support-test = {  git = "https://github.com/paritytech/substrate", default-features = false }
@@ -49,6 +50,7 @@ std = [
     "sp-runtime/std",
     "polkadex-primitives/std",
 	'frame-benchmarking/std',
+    'pallet-polkadex-ido-primitives/std'
 ]
 runtime-benchmarks = [
 	"frame-benchmarking",
