--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -13,7 +13,7 @@ targets = ["x86_64-unknown-linux-gnu"]
 [dependencies]
 codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
 hex-literal = { optional = true, version = '0.3.1' }
-serde = { features = ['derive'], optional = true, version = '1.0.101' }
+serde = { features = ['derive'], optional = true, version = '1.0.127' }
 static_assertions = "1.1.0"
 log = { version = "0.4.14", default-features = false }
 #pallets
@@ -83,8 +83,8 @@ sp-io = { version = '3.0.0', default-features = false, git = "https://github.com
 
 # Used for the node template's RPCs
 frame-system-rpc-runtime-api = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
-
-# Used for runtime benchmarking
+polkadex-ido-runtime-api = {path = "../pallets/Polkadex_Ido/rpc/runtime-api", default-features = false}
+pallet-polkadex-ido-primitives = {path = "../pallets/Polkadex_Ido/common",  default-features = false}# Used for runtime benchmarking
 frame-benchmarking = { version = "3.1.0", default-features = false, git = "https://github.com/paritytech/substrate.git", optional = true }
 frame-system-benchmarking = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", optional = true }
 
@@ -205,7 +205,10 @@ std = [
     "chainbridge/std",
     'erc721/std',
     'example/std',
-    'polkadex-ido/std'
+    'polkadex-ido/std',
+    'polkadex-ido-runtime-api/std',
+    'pallet-polkadex-ido-primitives/std'
+
 ]
 runtime-benchmarks = [
     "frame-benchmarking",
