--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "@types/mocha": "^8.0.3",
         "bn.js": "^5.2.0",
         "chai": "^4.2.0",
+        "csv-parser": "^3.0.0",
         "redspot": "^0.11.5",
         "typescript": "^4.0.2"
     },
